Changes after sonarqube report